--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@ div {
   body {
     background-color: hsl(0, 0%, 0%);
     }
-  a {
-    color:blueviolet;
-  }
+h1 {
+    color: rgb(96, 42, 157);
+    }
+
    
   
