Change labels color in Contact_Me page

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,14 @@
 html {
   background-color: black;
-}
+  }
 div {
     background-color: black;
   }
   body {
     background-color: hsl(0, 0%, 0%);
-    }
+  }
 h1 {
     color: rgb(91, 72, 173);
-    }
-
-   
-  
+  }
+label {color:rgb(91, 72, 173); 
+  }
