Add About page. Change font-size and font-family of <p> and <h1>.

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,12 @@ body {
   }
 h1 {
     color: rgb(91, 72, 173);
+    font-family: Courier New;
   }
 label {
-    color:rgb(91, 72, 173); 
+    color:rgb(168, 158, 214); 
   }
-
+p {
+  font-family: Courier New;
+  font-size: x-large;
+  }
