--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,14 @@ div {
 body {
     background-color: hsl(0, 0%, 0%);
   }
+h1 {color: rgb(91, 72, 173);
+    font-family: Courier New;      
+    }
 h2 {
     color: rgb(91, 72, 173);
     font-family: Courier New;
-  }
+}
+
 label {
     color:rgb(168, 158, 214); 
     font-family: Courier New;
@@ -26,6 +30,8 @@ p {
   .nav.navbar.justify-content-end li a {
     color:rgb(168, 158, 214);
   }
+  .nav.navbar.justify-content-end li a:hover {
+    color: #5110b9;
   .row {
     animation: transitionIn 0.90s;
   }
