Fix style sheet, added missing curly bracket

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ p {
   }
   .nav.navbar.justify-content-end li a:hover {
     color: #5110b9;
+  }
   .row {
     animation: transitionIn 0.90s;
   }
