Create two columns in About page, add animated line under titles

--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,20 @@ p {
       transform: rotateX(0);
     }
   }
+  .separator--line{
+    border: 0;
+    border-bottom: 3px solid
+    rgb(168, 158, 214);
+    width: 0;
+    -webkit-animation: separator-width 1s ease-out forwards;
+    animation: separator-width 1s ease-out forwards;
+  }
+  @-webkit-keyframes separator-width{
+    0%{
+      width: 20;
+    }
+    100%{
+      width: 60%;
+    }
+  }
+  
