--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ p {
   font-family: Courier New;
   font-size: x-large;
   }
+  button {width: 250px;
+     }
   .nav {
     font-family:sans-serif;
     font-size: large;
